implement pageable listAll. Fix criteria using TODAY predicate